# linkit

./: Cargo.toml
.github/workflows/: release.yml
src/: config.rs  handler.rs  main.rs
