[package]
name = "linkit"
version = "0.2.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
console = "0.16.3"
shellexpand = "3.1.0"
directories = "5.0"
dunce = "1.0.5"
fs_extra = "1.3.0"
symlink = "0.1.0"
